Project clothcycle_ph {
  database_type: "PostgreSQL / Neon current QA schema"
  Note: "ERD snapshot for the current Neon QA schema, checked against the D1 reference schema on 2026-05-22. Cloudflare D1 files are reference/migration targets only."
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [unique, not null]
  name varchar [not null]
  password_hash varchar [not null]
  password_setup_required boolean [default: false, note: "True only for Google-created accounts until the user sets a local password"]
  role varchar [note: "Default: user. Values: user, partner, admin"]
  status varchar [note: "Default: active. Values: active, inactive, suspended"]
  partner_id uuid [note: "Current partner pointer. Relationship shown through partners.user_id to avoid circular ERD dependency."]
  avatar_url varchar
  profile_photo jsonb
  bio text
  phone varchar
  address text
  terms_accepted_at timestamp
  last_login_at timestamp
  two_factor_enabled boolean [default: true]
  two_factor_code_hash varchar
  two_factor_code_expires_at timestamp
  two_factor_method varchar [note: "Default: email. Email-only current QA default"]
  two_factor_secret_encrypted text
  two_factor_confirmed_at timestamp
  email_verified_at timestamp
  failed_login_count int [default: 0]
  locked_until timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table user_preferences {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: "References users.id"]
  email_notifications boolean [default: true]
  push_notifications boolean [default: true]
  sms_notifications boolean [default: false]
  newsletter boolean [default: false]
  updated_at timestamp [default: `now()`]
}

Table user_recovery_codes {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: "References users.id"]
  code_hash varchar [not null]
  used_at timestamp
  created_at timestamp [default: `now()`]
}

Table password_reset_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: "References users.id"]
  token_hash varchar [not null]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [default: `now()`]
}

Table auth_events {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [note: "References users.id"]
  event_type varchar [not null]
  ip_address varchar
  user_agent text
  metadata jsonb
  created_at timestamp [default: `now()`]
}

Table rate_limits {
  key varchar [pk]
  count int [not null, default: 0]
  expires_at timestamp [not null]
  updated_at timestamp [default: `now()`]
}

Table partners {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [note: "References users.id"]
  name varchar [not null]
  description text
  logo_url varchar
  email varchar [unique, not null]
  phone varchar
  address text
  website varchar
  service_types text
  accepted_service_types text
  accepts_clean_only boolean [default: false]
  capacity_notes text
  pickup_areas text
  rule_change_requires_admin boolean [default: true]
  contact_person varchar
  status varchar [note: "Default: pending. Values: pending, active, inactive, rejected"]
  verified boolean [default: false]
  rating numeric [default: 0]
  latitude numeric
  longitude numeric
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table submissions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: "References users.id"]
  item_type varchar [not null]
  condition varchar [not null]
  fabric varchar
  cleanliness varchar
  description text
  photos json [note: "Postgres json[] array of uploaded image payloads"]
  status varchar [note: "Default: pending. Values: pending, verified, processed, rejected"]
  assigned_partner_id uuid [ref: > partners.id]
  submission_code varchar [unique]
  submission_name varchar
  service_type varchar [note: "recycle, donate, upcycle, buyback"]
  quantity int [default: 1]
  buyback_interest boolean [default: false]
  action varchar
  upcycle_request text
  scheduled_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table submission_details {
  id uuid [pk, default: `gen_random_uuid()`]
  submission_id uuid [unique, not null, ref: > submissions.id]
  item_types text
  other_item_type text
  condition text
  cleanliness text
  knows_fabric_type boolean
  fabric_types text
  custom_fabric_text text
  fabric_identification text
  brand text
  no_brand_visible boolean [default: false]
  fabric_description text
  restricted_category text [note: "Default: none"]
  uniform_branding text
  fiber_composition text
  wearability text
  repairability text
  contamination_level text
  damage_classification text
  repurposing_potential text
  trim_removal text
  weight_value numeric
  weight_unit varchar [note: "kg or g. Default: kg"]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table burn_tests {
  id uuid [pk, default: `gen_random_uuid()`]
  submission_id uuid [not null, ref: > submissions.id]
  performed boolean [default: false]
  page int
  moment text
  flames text
  no_flame text
  smell text
  ashes text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table submission_images {
  id uuid [pk, default: `gen_random_uuid()`]
  submission_id uuid [not null, ref: > submissions.id]
  url text [not null]
  storage_key text
  metadata jsonb
  uploaded_at timestamp [default: `now()`]
}

Table recommendation_runs {
  id uuid [pk, default: `gen_random_uuid()`]
  submission_id uuid [ref: > submissions.id]
  requested_by_user_id uuid [note: "References users.id"]
  engine_name varchar [note: "Default: dss"]
  engine_version varchar
  status varchar [note: "Default: completed. Values: pending, running, completed, failed"]
  criteria jsonb
  input_snapshot jsonb
  started_at timestamp [default: `now()`]
  completed_at timestamp
  error_message text
  audit_label text [note: "Default: DSS audit trail"]
  created_at timestamp [default: `now()`]
}

Table recommendation_results {
  id uuid [pk, default: `gen_random_uuid()`]
  run_id uuid [not null, ref: > recommendation_runs.id]
  submission_id uuid [ref: > submissions.id]
  partner_id uuid [ref: > partners.id]
  recommended_pathway varchar [not null]
  rank int
  score numeric
  confidence numeric
  explanation text
  details text
  output_payload jsonb
  selected boolean [default: false]
  generated_at timestamp [default: `now()`]
}

Table recommendation_feedback {
  id uuid [pk, default: `gen_random_uuid()`]
  recommendation_result_id uuid [not null, ref: > recommendation_results.id]
  user_id uuid [note: "References users.id"]
  rating int
  accepted boolean
  feedback text
  created_at timestamp [default: `now()`]
}

Table dss_rules {
  id uuid [pk, default: `gen_random_uuid()`]
  rule_key varchar [unique, not null]
  pathway varchar [note: "recycle, donate, upcycle, buyback, rejected"]
  category varchar
  question_key varchar
  expected_values jsonb
  weight numeric [default: 0]
  active boolean [default: true]
  description text
  created_by_user_id uuid [note: "References users.id"]
  updated_by_user_id uuid [note: "References users.id"]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  submission_id uuid [not null, ref: > submissions.id]
  from_user_id uuid [not null, note: "References users.id"]
  to_partner_id uuid [ref: > partners.id]
  type varchar [not null, note: "recycle, donate, upcycle, buyback"]
  status varchar [note: "Default: pending. Values: pending, accepted, completed, rejected"]
  amount numeric
  notes text
  bag_color varchar [note: "white=recycle, black=upcycle, green=donation"]
  estimated_distance_km numeric
  estimated_carbon_kg numeric [note: "Lightweight routing estimate, not a formal footprint inventory"]
  outcome_title text
  outcome_description text
  outcome_photos jsonb [note: "Uploaded partner outcome photo URLs"]
  outcome_reported_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table request_tracking_updates {
  id uuid [pk, default: `gen_random_uuid()`]
  submission_id uuid [not null, ref: > submissions.id]
  request_id uuid [ref: > transactions.id]
  user_id uuid [not null, note: "References users.id; user who recorded the progress update"]
  partner_id uuid [ref: > partners.id]
  progress_status varchar [not null, note: "request_sent, scheduled, in_transit, dropoff_completed, completed"]
  fulfillment_method varchar [note: "drop_off, shipping, pickup, other. Default: drop_off"]
  contact_name varchar [note: "Optional name/contact label provided by the user for the delivery update"]
  logistics_company varchar [note: "Optional courier/logistics company"]
  tracking_number varchar [note: "Optional shipping tracking number"]
  dropoff_scheduled_at timestamp [note: "Optional direct drop-off date/time"]
  dropoff_location text [note: "Optional partner-provided or user-entered drop-off location"]
  notes text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table deleted_records {
  id uuid [pk, default: `gen_random_uuid()`]
  entity_type varchar [not null]
  entity_id uuid [not null]
  snapshot jsonb
  deleted_by_user_id uuid [ref: > users.id]
  deleted_at timestamp [default: `now()`]
}

Table conversations {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: "References users.id"]
  partner_id uuid [ref: > partners.id]
  conversation_type varchar [note: "Default: general"]
  subject text
  status varchar [note: "Default: open. Values: open, closed, archived"]
  related_submission_id uuid [ref: > submissions.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table messages {
  id uuid [pk, default: `gen_random_uuid()`]
  from_user_id uuid [not null]
  to_user_id uuid [not null]
  conversation_id uuid [ref: > conversations.id]
  sender_type varchar
  content text [not null]
  read boolean [default: false]
  read_at timestamp
  related_submission_id uuid [ref: > submissions.id]
  related_transaction_id uuid [ref: > transactions.id]
  action_url text
  metadata jsonb [default: `'{}'`]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table message_attachments {
  id uuid [pk, default: `gen_random_uuid()`]
  message_id uuid [not null, ref: > messages.id]
  filename text
  url text [not null]
  metadata jsonb
  uploaded_at timestamp [default: `now()`]
}

Table uploaded_files {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id]
  storage_key text [not null]
  url text [not null]
  original_name text
  content_type text
  size_bytes int
  purpose varchar [note: "general, image, profile_photo, submission_image, message_attachment, outcome_photo"]
  related_entity_type varchar [note: "Optional logical owner such as user_profile, submission, message, transaction"]
  related_entity_id uuid
  metadata jsonb [default: `'{}'`]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table notifications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: "References users.id"]
  type varchar [not null]
  title varchar
  message text
  body text
  related_id uuid
  data jsonb [default: `'{}'`]
  read boolean [default: false]
  read_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table partner_rule_change_requests {
  id uuid [pk, default: `gen_random_uuid()`]
  partner_id uuid [ref: > partners.id]
  requested_by_user_id uuid [note: "References users.id"]
  rule_area varchar [not null]
  requested_change text [not null]
  reason text
  status varchar [note: "Default: pending. Values: pending, accepted, approved, declined, needs_more_information, implemented"]
  admin_notes text
  reviewed_by_user_id uuid [note: "References users.id"]
  reviewed_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table activity_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [note: "References users.id"]
  action varchar [not null]
  entity_type varchar
  entity_id uuid
  details jsonb
  created_at timestamp [default: `now()`]
}

Table schema_migrations {
  id int [pk, increment]
  name varchar [not null]
  applied_at timestamp [default: `now()`]
}
